// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure2fa Component enable2fa (form submit) should set state to "conflict" and not call on enable2fa 1`] = `
<div
  className="configure2fa-settings"
>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      Two-step verification
    </div>
    <div
      className="panel-body"
    >
      <div>
        <p>
          Activate this feature for enhanced account security
        </p>
        <h3>
          Using Google Authenticator
        </h3>
        <LocalForm
          initialState={Object {}}
          model="2fa"
          onSubmit={[Function]}
        >
          <ol>
            <li>
              Install the Google Authenticator app on your mobile device
            </li>
            <li>
              Open the app and select "Add Account" (usually a plus symbol)
            </li>
            <li>
              Scan the following QR code selecting the "scan barcode" option:
              <div
                className="qr-code"
              >
                <ForwardRef
                  includeMargin={false}
                  level="Q"
                  renderAs="svg"
                  value="otpAuthURL"
                />
              </div>
              Or enter this secret key into your Authenticator app
              <br />
              (please keep this key secret and don't share it):
              <div
                className="secret-key"
              >
                <span>
                  generatedSecret
                </span>
              </div>
            </li>
            <li>
              Enter the 6-digit verification code generated by your Authenticator app:
              <br />
              <div
                className="row"
              >
                <div
                  className="col-8 col-md-4 col-lg-2 has-error"
                >
                  <DefaultConnectedControlText
                    className="form-control"
                    id="token"
                    model=".token"
                  />
                </div>
              </div>
            </li>
          </ol>
          <p>
            <Connect(I18NLink)
              className="btn btn-default"
              to="/settings/account"
            >
              Cancel
            </Connect(I18NLink)>
            <button
              className="btn btn-success"
              type="submit"
            >
              <Connect(Translate)>
                Confirm
              </Connect(Translate)>
            </button>
          </p>
        </LocalForm>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configure2fa Component when user already using 2fa should show a "successfully configured" component 1`] = `
<div
  className="configure2fa-settings"
>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      Two-step verification
    </div>
    <div
      className="panel-body"
    >
      <div
        className="alert alert-success"
      >
        <Connect(Icon)
          icon="check"
        />
        <div
          className="force-ltr"
        >
          Congratulations!
          <br />
          You have successfully configured two-step verification.
        </div>
      </div>
      <Connect(I18NLink)
        className="btn btn-success"
        to="/settings/account"
      >
        OK
      </Connect(I18NLink)>
    </div>
  </div>
</div>
`;

exports[`Configure2fa Component when user not already using 2fa should show a QR code and Secret upon mounting 1`] = `
<div
  className="configure2fa-settings"
>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      Two-step verification
    </div>
    <div
      className="panel-body"
    >
      <div>
        <p>
          Activate this feature for enhanced account security
        </p>
        <h3>
          Using Google Authenticator
        </h3>
        <LocalForm
          initialState={Object {}}
          model="2fa"
          onSubmit={[Function]}
        >
          <ol>
            <li>
              Install the Google Authenticator app on your mobile device
            </li>
            <li>
              Open the app and select "Add Account" (usually a plus symbol)
            </li>
            <li>
              Scan the following QR code selecting the "scan barcode" option:
              <div
                className="qr-code"
              >
                <ForwardRef
                  includeMargin={false}
                  level="Q"
                  renderAs="svg"
                  value="otpAuthURL"
                />
              </div>
              Or enter this secret key into your Authenticator app
              <br />
              (please keep this key secret and don't share it):
              <div
                className="secret-key"
              >
                <span>
                  generatedSecret
                </span>
              </div>
            </li>
            <li>
              Enter the 6-digit verification code generated by your Authenticator app:
              <br />
              <div
                className="row"
              >
                <div
                  className="col-8 col-md-4 col-lg-2 "
                >
                  <DefaultConnectedControlText
                    className="form-control"
                    id="token"
                    model=".token"
                  />
                </div>
              </div>
            </li>
          </ol>
          <p>
            <Connect(I18NLink)
              className="btn btn-default"
              to="/settings/account"
            >
              Cancel
            </Connect(I18NLink)>
            <button
              className="btn btn-success"
              type="submit"
            >
              <Connect(Translate)>
                Confirm
              </Connect(Translate)>
            </button>
          </p>
        </LocalForm>
      </div>
    </div>
  </div>
</div>
`;
